--- a/scripts/R06_beta_diversity_diet_and_microbiome.Rmd
+++ b/scripts/R06_beta_diversity_diet_and_microbiome.Rmd
@@ -70,23 +70,14 @@ qiime tools import --input-path R06_p2d_fc_df.biom --output-path  R06_p2d_fc_df.
 ```
 
 ```{bash}
- qiime diversity beta-phylogenetic \
+qiime diversity beta-phylogenetic \
             --i-table R06_p2d_fc_df.qza \
             --i-phylogeny output_food_tree_datatree.qza \
             --p-metric unweighted_unifrac \
             --o-distance-matrix R06_p2d_fc_unweighted_unifrac_distance_matrix.qza
 ```
 
-```{bash}
-qiime diversity pcoa \
-            --i-distance-matrix R06_p2d_fc_unweighted_unifrac_distance_matrix.qza \
-            --o-pcoa R06_p2d_fc_unweighted_unifrac_distance_PCOA.qza
 
-```
-
-```{bash}
-qiime tools export --input-path R06_p2d_fc_unweighted_unifrac_distance_PCOA.qza --output-path R06_p2d_fc_unweighted_unifrac_distance_PCOA
-```
 
 ```{bash}
 qiime tools export \
@@ -96,21 +87,29 @@ qiime tools export \
 
 
 ```{r}
-# import the ordination results
-dfn <- '../data/R06_p2d_fc_unweighted_unifrac_distance_PCOA/ordination.txt'
-dpcoa <- read_tsv(dfn, skip = 9, col_names = F)  %>% 
-    filter(! X1 %in% c('Biplot','Site constraints')) %>%
-    select(sampleid = X1, PC1 = X2, PC2 = X3) %>% 
-  inner_join(meta %>% select(sampleid, pid, sdrt))
+# can directly extract the distance between certain samples that I care about
+diet_dist_matrix <- read_tsv('../data/R06_p2d_fc_unweighted_unifrac_distance_matrix/distance-matrix.tsv') %>% 
+  rename(sampleid1 = ...1) %>% 
+  gather('sampleid2','distance', names(.)[2]:names(.)[ncol(.)]) %>% 
+  left_join(meta %>% select(pid1 = pid, sampleid1 = sampleid, sdrt1 = sdrt)) %>% 
+  left_join(meta %>% select(pid2 = pid, sampleid2 = sampleid, sdrt2 = sdrt)) %>% 
+  filter(pid1 == pid2) %>% 
+  filter(sampleid1 != sampleid2) %>% 
+  rename(pid = pid1) %>% 
+  select(-pid2)
 
-dpcoa_dist_earliest <- dpcoa %>% 
+# Group by `pid` and find the minimum of `sdrt1` and `sdrt2`
+min_sdrt <- diet_dist_matrix %>%
   group_by(pid) %>%
-  arrange(sdrt) %>%
-  mutate(distance_to_earliest = sqrt((PC1 - first(PC1))^2 + (PC2 - first(PC2))^2))
+  summarize(min_sdrt = min(sdrt1, sdrt2))
 
-# some patient follows a very clear trajectory of the sdrt up, distance also up.
-# dpcoa_dist_earliest %>% 
-#   ggscatter(x = 'sdrt', y = 'distance_to_earliest', facet.by = 'pid')
+# Join `min_sdrt` back to the original dataframe
+df_pair <- diet_dist_matrix %>%
+  left_join(min_sdrt, by = "pid")
+
+# Filter rows where one of sdrt1 or sdrt2 equals min_sdrt but not both
+diet_filtered_df <- df_pair %>%
+  filter(((sdrt1 == min_sdrt) & (sdrt2 != min_sdrt)) ) 
 ```
 
 # similary do this for the stool samples relative abundance at genus level
@@ -122,7 +121,7 @@ relab_genus <- read_csv('../data/022_ALL173_stool_samples_genus_counts.csv') %>%
 
 dist_ <- vegdist(relab_genus, method = 'bray')
 eigen <- cmdscale(dist_, eig = T)$eig
-percent_var <- signif(eigen/sum(eigen), 3)*100
+percent_var_stool <- signif(eigen/sum(eigen), 3)*100
 bc <- cmdscale(dist_, k = 2)
 beta_ <- bc %>%
   as.data.frame() %>%
@@ -130,21 +129,38 @@ beta_ <- bc %>%
   inner_join(meta %>% select(sampleid, pid, sdrt)) %>% 
   rename(PC1 = V1, PC2 = V2)
 
-beta_dist_earliest <- beta_ %>% 
-  group_by(pid) %>%
-  arrange(sdrt) %>%
-  mutate(distance_to_earliest = sqrt((PC1 - first(PC1))^2 + (PC2 - first(PC2))^2))
 ```
+
+
+```{r}
+# repeat the process for diet matrix for the stool matrix
+stool_dist_matrix <- dist_ %>% 
+  as.matrix() %>% 
+  as.data.frame() %>% 
+  rownames_to_column('sampleid1') %>% 
+  gather('sampleid2','distance', names(.)[2]:names(.)[ncol(.)]) %>% 
+  left_join(meta %>% select(pid1 = pid, sampleid1 = sampleid, sdrt1 = sdrt)) %>% 
+  left_join(meta %>% select(pid2 = pid, sampleid2 = sampleid, sdrt2 = sdrt)) %>% 
+  filter(pid1 == pid2) %>% 
+  filter(sampleid1 != sampleid2) %>% 
+  rename(pid = pid1) %>% 
+  select(-pid2)
+
+# Join `min_sdrt` back to the original dataframe
+df_pair_stool <- stool_dist_matrix %>%
+  left_join(min_sdrt, by = "pid")
+
+stool_filtered_df <- df_pair_stool %>%
+  filter(((sdrt1 == min_sdrt) & (sdrt2 != min_sdrt)) ) 
+```
+
 # now see if there is some association
 
 ```{r}
-joined <- dpcoa_dist_earliest %>% 
-  select(-PC1, -PC2) %>% 
-  rename(diet_dist = distance_to_earliest) %>% 
-  inner_join(beta_dist_earliest %>% select(-PC1, -PC2) %>% rename(stool_dist = distance_to_earliest)) %>% 
-  # filter out the baseline compared to baseline (distance is zero)
-  filter(diet_dist > 0)
-
+joined <- stool_filtered_df %>% 
+  rename(stool_dist = distance) %>% 
+  full_join(diet_filtered_df %>% rename(diet_dist = distance))
+ 
 # it's important to account for the repeated measurements here 
 # joined %>% 
 #   ggscatter(x = 'diet_dist', y = 'stool_dist', facet.by = 'pid')
@@ -176,7 +192,6 @@ pval = ret$coefficients[2,5]
 ```{r}
 library(ggpmisc)
 Partial_residual <- joined %>% 
-  ungroup() %>% 
   mutate(fixed_effects = predict(model, re.form=NA),
          residuals = residuals(model),
          partial_residuals = residuals + fixed_effects) %>% 
@@ -186,8 +201,8 @@ Partial_residual <- joined %>%
                aes(label = paste(..eq.label.., ..rr.label.., sep = "\n"), colour = 'red'), 
                parse = TRUE) +  # Add the equation and R-squared
   geom_smooth(method = "lm", se = FALSE) +  
-  labs(x = "Diet Distance", y = "Partial Residuals (Stool Distance)") +
-  ggtitle("Partial Residual Plot") +
+  labs(x = "Diet Distance", y = "Stool Distance after\ncontrolling for individual patient effects") +
+  ggtitle("Diet Distance VS Stool Distance\nafter controlling for individual patient effects") +
   theme_pubr() +
   theme(aspect.ratio = 1)
 
@@ -195,17 +210,13 @@ Partial_residual
   
 # In a linear regression model, a partial residual is a way to isolate and visualize the relationship between the response variable and a specific predictor variable, while accounting for the effects of all the other predictor variables in the model.
 
-# Formula:
-
-# The partial residual for a predictor X_i is calculated as:
-# 
-# Partial Residual_i = Residual + β_i * X_i 
-
+# Formula:# The partial residual for a predictor X_i is calculated as:
+# # Partial Residual_i = Residual + β_i * X_i 
 # Check Linearity Assumption: Partial residual plots are a valuable diagnostic tool to check if the assumption of linearity holds for each predictor in a multiple regression model.
 
 # Direction of Association: The positive slope of the line confirms that there is a positive association between diet distance and stool distance. This means that, on average, as the dissimilarity between a patient's subsequent and initial food intake increases, so does the dissimilarity between their subsequent and initial stool microbiome composition.
 # 
-# Average Effect Size: The slope of the line quantifies the average change in stool distance for each unit increase in diet distance. For example, if the slope is 0.3, it would mean that a 1-unit increase in diet distance is associated with a 0.3-unit increase in stool distance, on average, after controlling for individual patient effects. 
+# Average Effect Size: The slope of the line quantifies the average change in stool distance for each unit increase in diet distance. For example, if the slope is 0.3, it would mean that a 1-unit increase in diet distance is associated with a 0.3-unit increase in stool distance, on average, after controlling for individual patient effects.  
 ```
 ```{r}
 # was I plotting the original data in the above plot??
@@ -231,42 +242,67 @@ Partial_residual
 ```{r}
 # would be good to do a visualization of the beta diversity of the food and stool 
 # too hard to do the whole thing in ggplot, so start with a scatter plot and then fininsh in illustrator 
-sbeta_example <-  beta_dist_earliest %>% 
-  mutate(highlightpt = if_else(pid == 'P104', T, F),
-         highlight_time = if_else(pid == 'P104' & sdrt == -2, T, F)) %>% 
+sbeta_example <-  beta_ %>% 
+  mutate(highlightpt = if_else(pid == 'P11', T, F),
+         highlight_time = if_else(pid == 'P11' & sdrt == -2, T, F)) %>% 
   arrange(highlightpt)
 
 sbeta_example_pcoa <- sbeta_example %>% 
   ggscatter(x = 'PC1', y = 'PC2', color = 'highlightpt', shape = 'highlight_time', alpha = 0.8,
             title = 'Microbiome Bray curtis distance PCoA') +
   scale_color_manual(name = "", values = c('gray','red'),
-                       labels = c("Other patients", "Patient 104")) +
+                       labels = c("Other patients", "Patient 11")) +
   scale_shape_manual(name = "", values = c(16,17),
                        labels = c("Later time points", "Earliest timepoint")) +
+    xlab(paste0("PCo 1 [",percent_var_stool[1],"%]")) +
+  ylab(paste0("PCo 2 [",percent_var_stool[2],"%]")) +
   theme(aspect.ratio =  1)
+
+sbeta_example_pcoa
 ```
 ```{r}
-dbeta_example <-  dpcoa_dist_earliest %>% 
-  mutate(highlightpt = if_else(pid == 'P104', T, F),
-         highlight_time = if_else(pid == 'P104' & sdrt == -2, T, F)) %>% 
+# the visualization for the pcoa of the diet data
+# import the ordination results
+dfn <- '../data/R06_p2d_fc_unweighted_unifrac_distance_PCOA/ordination.txt'
+dpcoa <- read_tsv(dfn, skip = 9, col_names = F)  %>% 
+    filter(! X1 %in% c('Biplot','Site constraints')) %>%
+    select(sampleid = X1, PC1 = X2, PC2 = X3) %>% 
+  inner_join(meta %>% select(sampleid, pid, sdrt))
+
+library(qiime2R)
+
+# Read the QZA file (replace with your actual file name)
+pcoa_results <- read_qza("../data/R06_p2d_fc_unweighted_unifrac_distance_PCOA.qza")
+
+# Access the variance explained
+variance_explained <- pcoa_results$data$ProportionExplained
+percent_var_diet1 <- variance_explained %>% mutate(pco1 = round(PC1*100, 1))%>% pull(pco1)
+percent_var_diet2 <- variance_explained %>% mutate(pco2 = round(PC2*100, 1)) %>% pull(pco2)
+
+
+dbeta_example <-  dpcoa %>% 
+  mutate(highlightpt = if_else(pid == 'P11', T, F),
+         highlight_time = if_else(pid == 'P11' & sdrt == -2, T, F)) %>% 
   arrange(highlightpt)
 
 dbeta_example_pcoa <- dbeta_example %>% 
   ggscatter(x = 'PC1', y = 'PC2', color = 'highlightpt', shape = 'highlight_time', alpha = 0.8,
             title = 'Diet unweighted unifrac distance PCoA') +
   scale_color_manual(name = "", values = c('gray','red'),
-                       labels = c("Other patients", "Patient 104")) +
+                       labels = c("Other patients", "Patient 11")) +
   scale_shape_manual(name = "", values = c(16,17),
                        labels = c("Later time points", "Earliest timepoint")) +
+    xlab(paste0("PCo 1 [",percent_var_diet1,"%]")) +
+  ylab(paste0("PCo 2 [",percent_var_diet2,"%]")) +
   theme(aspect.ratio =  1)
+ 
+dbeta_example_pcoa
 ```
 ```{r}
 # are there correlation within each pt own diet
 library(vegan)
 
-diet_dist_matrix <- read_tsv('../data/R06_p2d_fc_unweighted_unifrac_distance_matrix/distance-matrix.tsv') %>% 
-  rename(sampleid = ...1) %>% 
-  full_join(meta %>% select(pid, sampleid))
+
 
 diet_matrix <- diet_dist_matrix %>% 
   select(-pid) %>% 
@@ -275,6 +311,7 @@ diet_matrix <- diet_dist_matrix %>%
 # Run PERMANOVA
 adonis2(diet_matrix ~ diet_dist_matrix$pid, permutations = 999, parallel = 10) 
 ```
+
 The results of the PERMANOVA strongly suggest that there is significant within-patient correlation in dietary intake. In other words, individual patients tend to have consistent dietary patterns over time, and these patterns are distinct from those of other patients.
 
 ```{r}
